fixing layout on mobile about page

--- a/About/style.css
+++ b/About/style.css
@@ -5,8 +5,7 @@ header{
 	flex-direction: column;
 	justify-content: space-between;
 	height: auto;
-	margin-right: var(--size-0);
-	margin-bottom: var(--size-0);
+	margin-bottom: 8px;
 	padding-top: var(--size-2);
 	padding-bottom: var(--size-2);
 }
@@ -23,7 +22,7 @@ h1{
 	padding: var(--size-0);
 	gap: var(--size-0);
 	border-radius: 16px;
-	margin-bottom: var(--size-0);
+	margin-bottom: 8px;
 	img{
 		width: 100%;  
 		height: 100%;
@@ -36,6 +35,8 @@ h1{
 .headshot{
 	overflow: hidden;
 	border-radius: 8px;
+	max-height: 200px;
+	width: auto;
 }
 
 #header-body{
@@ -45,6 +46,10 @@ h1{
 	}
 
 @media (min-width: 768px) {
+
+	.headshot{
+		max-height: none;
+	}
 
 	#headshot-images{
 		grid-template-columns: repeat(4, auto);
@@ -69,6 +74,10 @@ h1{
 
 
 @media (min-width: 1200px) {
+
+	header{
+		margin-right: 8px;
+	}
 
 	.side-by-side{ 
 		display: flex;
